# CarsMatter/Controllers/CarsController.cs
@@ -6,30 +6,31 @@
     using CarsMatter.Infrastructure.Models;
     using CarsMatter.Infrastructure.Interfaces;
     using System.Collections.Generic;
-    using CarsMatter.Infrastructure.Helpers;
     using System;
     using Microsoft.Extensions.Logging;
 
-    [Route("api/[controller]")]
+    [Route("api/cars")]
     [ApiController, Produces("application/json")]
     public class CarsController : ControllerBase
     {
-        private readonly ICarRepository carRepository;
+        private readonly ICarsService carsService;
 
         private readonly ILogger<CarsController> logger;
 
-        public CarsController(ICarRepository carRepository, ILogger<CarsController> logger)
+        public CarsController(
+            ICarsService carsService, 
+            ILogger<CarsController> logger)
         {
-            this.carRepository = carRepository;
+            this.carsService = carsService;
             this.logger = logger;
         }
 
-        [HttpGet("/brands")]
+        [HttpGet("brands")]
         public async Task<ActionResult<IEnumerable<Brand>>> GetAllBrands()
         {
             try
             {
-                List<Brand> brands = await CarsHtmlParser.ParseBrands();
+                List<Brand> brands = await this.carsService.GetAllBrands();
                 return Ok(brands);
             }
             catch (Exception e)
@@ -39,12 +40,12 @@
             }
         }
 
-        [HttpGet("/brands/models")]
-        public async Task<ActionResult<IEnumerable<CarModel>>> GetModelsForBrand([FromQuery] string brandHttpPath)
+        [HttpGet("brands/models")]
+        public async Task<ActionResult<IEnumerable<BrandModel>>> GetModelsForBrand([FromQuery] string brandHttpPath)
         {
             try
             {
-                List<CarModel> brandModels = await CarsHtmlParser.ParseModel(brandHttpPath);
+                List<BrandModel> brandModels = await this.carsService.GetAllBrandModels(brandHttpPath);
 
                 return Ok(brandModels);
             }
@@ -55,12 +56,12 @@
             }
         }
 
-        [HttpGet("/brands/models/cars")]
+        [HttpGet("brands/models/cars")]
         public async Task<ActionResult<IEnumerable<Model>>> GetCarsForModel([FromQuery] string modelHttpPath)
         {
             try
             {
-                List<Model> brandCars = await CarsHtmlParser.ParseCarsForModel(modelHttpPath);
+                List<Model> brandCars = await this.carsService.GetAllCarsForModel(modelHttpPath);
                 return Ok(brandCars);
             }
             catch (Exception e)
@@ -70,14 +71,34 @@
             }
         }
 
-
-        // GET: api/Cars
-        [HttpGet]
-        public async Task<ActionResult<IEnumerable<Brand>>> GetCars()
+        [HttpGet("brands/models/cars/modifications")]
+        public async Task<ActionResult<IEnumerable<Model>>> GetAllCarsModifications([FromQuery] string carModificationsHttpPath)
         {
-            var cars = await CarsHtmlParser.GetAllCars();
+            try
+            {
+                List<Car> brandCars = await this.carsService.GetAllCarsModificationsForModel(carModificationsHttpPath);
+                return Ok(brandCars);
+            }
+            catch (Exception e)
+            {
+                this.logger.LogError(e, e.Message);
+                return new StatusCodeResult(StatusCodes.Status500InternalServerError);
+            }
+        }
 
-            return Ok(cars);
+        [HttpGet("brands/models/cars/image")]
+        public async Task<ActionResult<string>> GetImageForModel([FromQuery] string carImagePath)
+        {
+            try
+            {
+                string base64Image = await this.carsService.GetImageForModel(carImagePath);
+                return Ok(base64Image);
+            }
+            catch (Exception e)
+            {
+                this.logger.LogError(e, e.Message);
+                return new StatusCodeResult(StatusCodes.Status500InternalServerError);
+            }
         }
     }
 }
