# CarsMatterApp/app/src/main/java/com/andrey/carsmatter/models/ConsumablesNote.java
@@ -3,14 +3,15 @@ package com.andrey.carsmatter.models;
 import java.util.Date;
 
 public class ConsumablesNote {
+    public int Id;
     public Date Date;
     public String KindOfService;
     public float Price;
-    public long Odo;
+    public int Odo;
     public String Location;
     public String Notes;
 
-    public ConsumablesNote(Date date, String kindOfService, float price, long odo, String location, String notes) {
+    public ConsumablesNote(Date date, String kindOfService, float price, int odo, String location, String notes) {
         this.Date = date;
         this.KindOfService = kindOfService;
         this.Price = price;
